# kv

./: .gitignore  Cargo.toml  LICENSE  README.md
kv_proxy/: Cargo.toml  config.example.toml
kv_proxy/src/: config.rs  lib.rs  main.rs  utils.rs
kv_store/: Cargo.toml  build.rs
kv_store/proto/: key_value_store.proto
kv_store/src/: config.rs  lib.rs  main.rs
