[package]
name = "kv_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
env_logger = "0.11.3"
kv_store = { path = "../kv_store" }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
tonic = "0.11.0"
